--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,19 +49,19 @@ jobs:
             - POSTGRES_USER=admin
             - POSTGRES_DB=auth-db
         command: -p 7432
-      - image: quay.io/hmpps/hmpps-auth:latest
+      - image: ghcr.io/ministryofjustice/hmpps-auth:latest
         environment:
           - SERVER_PORT=9090
           - SPRING_PROFILES_ACTIVE=dev,local-postgres,auth-seed
           - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:7432/auth-db
-      - image: quay.io/hmpps/hmpps-external-users-api:2024-09-23.3630.2e6d15e
+      - image: ghcr.io/ministryofjustice/hmpps-external-users-api:2024-09-23.3630.2e6d15e
         environment:
           - SERVER_PORT=8089
           - SPRING_PROFILES_ACTIVE=dev,local-postgres
           - API_BASE_URL_OAUTH=http://localhost:9090/auth
           - SPRING_R2DBC_URL=r2dbc:postgresql://localhost:7432/auth-db?sslmode=prefer
           - SPRING_FLYWAY_URL=jdbc:postgresql://localhost:7432/auth-db?sslmode=prefer
-      - image: quay.io/hmpps/hmpps-manage-users-api:latest
+      - image: ghcr.io/ministryofjustice/hmpps-manage-users-api:latest
         environment:
           - SERVER_PORT=9091
           - SPRING_PROFILES_ACTIVE=dev
