--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - $PWD/localstack:/docker-entrypoint-initaws.d
 
   hmpps-auth:
-    image: quay.io/hmpps/hmpps-auth:latest
+    image: ghcr.io/ministryofjustice/hmpps-auth:latest
     container_name: hmpps-auth
     depends_on:
       - auth-db
@@ -56,7 +56,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-db:5432/auth-db
 
   hmpps-external-users-api:
-    image: quay.io/hmpps/hmpps-external-users-api:2024-09-23.3630.2e6d15e
+    image: ghcr.io/ministryofjustice/hmpps-external-users-api:2024-09-23.3630.2e6d15e
     container_name: hmpps-external-users-api
     depends_on:
       - hmpps-auth
@@ -72,7 +72,7 @@ services:
       - SPRING_FLYWAY_URL=jdbc:postgresql://auth-db:5432/auth-db?sslmode=prefer
 
   hmpps-manage-users-api:
-    image: quay.io/hmpps/hmpps-manage-users-api:latest
+    image: ghcr.io/ministryofjustice/hmpps-manage-users-api:latest
     container_name: hmpps-manage-users-api
     depends_on:
       - hmpps-external-users-api
