MAP-2535: add integration test GHA file

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -67,3 +67,17 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+    steps:
+      - name: Clone repository
+      - uses: actions/checkout@v6
+
+      - name: Setup Java
+        uses: actions/setup-java@v5
+        with:
+          distribution: 'temurin'
+          java-version: 25
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v5
+
+
