--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -76,217 +76,223 @@ jobs:
 
   integration_playwright_tests:
     name: Run Playwright Integration Tests
-    needs:
-      - kotlin_build
-    runs-on: ubuntu-latest
-    container:
-      image: cimg/openjdk:21.0-browsers
-      options: --name app
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install xvfb
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb
-      - name: Install PostgreSQL client
-        run: |
-          sudo apt-get install -y postgresql-client
-      - name: Setup Java 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-      - name: Ensure Docker Compose is available
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y iproute2 docker-compose-plugin
-      - name: Start required containers
-        run: sudo docker-compose -f docker-compose.integration.yml up -d
-      - name: Wait for services from inside tester container
-        run: |
-          echo "Waiting for Auth service from inside tester container..."
-          sudo docker-compose -f docker-compose.integration.yml exec -T tester /bin/sh -c '
-            for i in $(seq 1 10); do
-              echo "Attempt $i: curling http://auth:9090/auth/health"
-              if curl --fail --silent http://auth:9090/auth/health; then
-                echo "✅ Auth service is ready!"
-                exit 0
-              fi
-              echo "Retry $i: Not ready yet. Sleeping..."
-              sleep 10
-            done
-            echo "❌ Auth service did not become ready."
-            exit 1
-          '
-      - name: Wait for Postgres from inside tester container
-        run: |
-          echo "Waiting for Postgres from inside tester container..."
-          sudo docker-compose -f docker-compose.integration.yml exec -T tester-sql /bin/sh -c '
-            for i in $(seq 1 10); do
-              echo "Attempt $i: checking Postgres..."
-              PGPASSWORD=letmein pg_isready -h postgres-jpc -p 5432 -U jpc -d jpc
-              if [ $? -eq 0 ]; then
-                echo "✅ Postgres is ready!"
-                exit 0
-              fi
-              echo "Retry $i: Not ready yet. Sleeping..."
-              sleep 10
-            done
-            echo "❌ Postgres did not become ready."
-            exit 1
-          '
-      - name: Download app JAR
-        uses: actions/download-artifact@v4
-        with:
-          name: app-jar
-          path: build/libs
-      - name: Build image from Dockerfile
-        run: |
-          sudo docker build -t app_image .
-      - name: Run App container in the same network
-        run: |
-          # Find the network created by docker-compose
-          NETWORK_NAME=$(sudo docker network ls --filter "label=com.docker.compose.project" --format '{{.Name}}' | head -n 1)
-          if [ -z "$NETWORK_NAME" ]; then
-            echo "❌ Failed to find docker-compose network"
-            echo "Available networks:"
-            sudo docker network ls
-            exit 1
-          fi
-          echo "✅ Using network: $NETWORK_NAME"
-          
-          sudo docker run -d \
-            --name my_app \
-            --network $NETWORK_NAME \
-            -p 8080:8080 \
-            -e SPRING_PROFILES_ACTIVE=integration-tests \
-            -e SERVER_SERVLET_SESSION_COOKIE_SECURE=false \
-            app_image \
-            sh -c "java -jar /app/app.jar"
-          
-          # Verify container started
-          sleep 2
-          if ! sudo docker ps | grep -q my_app; then
-            echo "❌ Container my_app failed to start"
-            echo "Container logs:"
-            sudo docker logs my_app || true
-            exit 1
-          fi
-          echo "✅ Container my_app started successfully"
-      - name: Wait for app to be healthy
-        id: wait_health
-        continue-on-error: true
-        run: |
-          echo "Waiting for app to be healthy from inside tester container..."
-          sudo docker-compose -f docker-compose.integration.yml exec -T auth /bin/sh -c '
-            for i in $(seq 1 20); do
-              echo "Attempt $i: Checking app health ..."
-              response=$(curl -s -H "Host: localhost" http://my_app:8080/health || true)
-              echo "Response: $response"
-              echo "$response" | grep "\"status\":\"UP\"" > /dev/null && exit 0
-              echo "Retry $i: App not ready yet. Sleeping..."
-              sleep 10
-            done
-            exit 1
-          '
-      - name: Print app logs on failure
-        if: steps.wait_health.outcome == 'failure'
-        run: |
-          echo "❌ App failed to become healthy in time."
-          echo "---- app.log ----"
-          sudo docker logs my_app || true
-          echo "-----------------"
-          echo "---- Tomcat access logs ----"
-          sudo docker exec my_app sh -c 'cat /app/logs/*.log || true'
-          echo "-----------------------------"
-      - name: Stop job if app failed to start
-        if: steps.wait_health.outcome == 'failure'
-        run: |
-          echo "❌ Stopping job because the app failed to start properly."
-          exit 1
-      - name: Run Playwright Integration Tests in Docker
-        id: integration_tests
-        run: |
-          NETWORK_NAME=$(sudo docker network ls --filter "label=com.docker.compose.project" --format '{{.Name}}' | head -n 1)
-          if [ -z "$NETWORK_NAME" ]; then
-            echo "❌ Failed to find docker-compose network"
-            exit 1
-          fi
-          echo "✅ Running Playwright tests in network: $NETWORK_NAME"
-          sudo docker run --rm \
-            --network "$NETWORK_NAME" \
-            -v "${{ github.workspace }}:/app" \
-            -v ~/.gradle:/root/.gradle \
-            -w /app \
-            -e APP_BASE_URL="http://my_app:8080" \
-            mcr.microsoft.com/playwright:v1.47.2-jammy \
-            bash -c '
-              set -e
-              echo "Installing OpenJDK and curl..."
-              apt-get update -qq
-              apt-get install -y openjdk-21-jdk curl iputils-ping > /dev/null
-              export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64
-              export PATH=$JAVA_HOME/bin:$PATH
-              echo "🔍 Java version:"
-              java -version
-              echo "🔍 Resolving container hostnames..."
-              APP_IP=$(getent hosts my_app | awk "{ print \$1 }")
-              AUTH_IP=$(getent hosts auth | awk "{ print \$1 }")
-              echo "Resolved my_app -> $APP_IP"
-              echo "Resolved auth  -> $AUTH_IP"
-              echo "$APP_IP my_app" >> /etc/hosts
-              echo "$AUTH_IP auth" >> /etc/hosts
-              cat /etc/hosts
-              export PLAYWRIGHT_ARGS="--no-sandbox --disable-dev-shm-usage --host-resolver-rules=\\\"MAP my_app $APP_IP, MAP auth $AUTH_IP, EXCLUDE localhost\\\""
-              echo "🔍 Listing /app contents:"
-              ls -l /app
-              echo "Testing network connectivity..."
-              ping -c 2 my_app || echo "⚠️ Ping failed"
-              echo "Checking app health with header Host: localhost..."
-              curl -v -H "Host: localhost" http://my_app:8080/health || echo "⚠️ Curl failed"
-              echo "Installing Playwright dependencies..."
-              npx playwright install --with-deps
-              echo "Running Gradle Playwright tests..."
-              xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" \
-                ./gradlew --no-daemon --info testPlaywrightIntegration \
-                -Dplaywright.args="$PLAYWRIGHT_ARGS" \
-                -Dplaywright.headless=true
-            '
-      - name: Print app logs on failure
-        if: always()
-        run: |
-          echo "Checking for app container..."
-          if sudo docker ps -a --format '{{.Names}}' | grep -q '^my_app$'; then
-            echo "✅ Container my_app found"
-            echo "---- app logs ----"
-            sudo docker logs my_app || true
-            echo "-----------------"
-            echo "---- Tomcat access logs ----"
-            sudo docker exec my_app sh -c 'cat /app/logs/*.log || true'
-            echo "-----------------------------"
-          else
-            echo "⚠️ Container my_app does not exist or has been removed"
-            echo "Running containers:"
-            sudo docker ps -a || true
-          fi
-      - name: Print auth logs on failure
-        if: always()
-        run: |
-          echo "Checking for auth container..."
-          if sudo docker ps -a --format '{{.Names}}' | grep -q '^auth$'; then
-            echo "✅ Container auth found"
-            echo "---- Auth logs ----"
-            sudo docker logs auth || true
-            echo "-----------------"
-          else
-            echo "⚠️ Container auth does not exist or has been removed"
-          fi
-      - name: Upload Playwright videos
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-videos
-          path: build/reports/tests/testPlayWrightIntegration/videos/
+    uses: ./.github/workflows/integration_tests.yml
+    with:
+      postgres-tag: "17"
+      postgres-db: jpc
+      postgres-username: jpc
+      postgres-password: letmein
+#    needs:
+#      - kotlin_build
+#    runs-on: ubuntu-latest
+#    container:
+#      image: cimg/openjdk:21.0-browsers
+#      options: --name app
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Install xvfb
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y xvfb
+#      - name: Install PostgreSQL client
+#        run: |
+#          sudo apt-get install -y postgresql-client
+#      - name: Setup Java 21
+#        uses: actions/setup-java@v4
+#        with:
+#          distribution: temurin
+#          java-version: 21
+#      - name: Ensure Docker Compose is available
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y iproute2 docker-compose-plugin
+#      - name: Start required containers
+#        run: sudo docker-compose -f docker-compose.integration.yml up -d
+#      - name: Wait for services from inside tester container
+#        run: |
+#          echo "Waiting for Auth service from inside tester container..."
+#          sudo docker-compose -f docker-compose.integration.yml exec -T tester /bin/sh -c '
+#            for i in $(seq 1 10); do
+#              echo "Attempt $i: curling http://auth:8080/__admin/mappings"
+#              if curl --fail --silent http://auth:8080/__admin/mappings > /dev/null; then
+#                echo "✅ Auth service is ready!"
+#                exit 0
+#              fi
+#              echo "Retry $i: Not ready yet. Sleeping..."
+#              sleep 10
+#            done
+#            echo "❌ Auth service did not become ready."
+#            exit 1
+#          '
+#      - name: Wait for Postgres from inside tester container
+#        run: |
+#          echo "Waiting for Postgres from inside tester container..."
+#          sudo docker-compose -f docker-compose.integration.yml exec -T tester-sql /bin/sh -c '
+#            for i in $(seq 1 10); do
+#              echo "Attempt $i: checking Postgres..."
+#              PGPASSWORD=letmein pg_isready -h postgres-jpc -p 5432 -U jpc -d jpc
+#              if [ $? -eq 0 ]; then
+#                echo "✅ Postgres is ready!"
+#                exit 0
+#              fi
+#              echo "Retry $i: Not ready yet. Sleeping..."
+#              sleep 10
+#            done
+#            echo "❌ Postgres did not become ready."
+#            exit 1
+#          '
+#      - name: Download app JAR
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: app-jar
+#          path: build/libs
+#      - name: Build image from Dockerfile
+#        run: |
+#          sudo docker build -t app_image .
+#      - name: Run App container in the same network
+#        run: |
+#          # Find the network created by docker-compose
+#          NETWORK_NAME=$(sudo docker network ls --filter "label=com.docker.compose.project" --format '{{.Name}}' | head -n 1)
+#          if [ -z "$NETWORK_NAME" ]; then
+#            echo "❌ Failed to find docker-compose network"
+#            echo "Available networks:"
+#            sudo docker network ls
+#            exit 1
+#          fi
+#          echo "✅ Using network: $NETWORK_NAME"
+#
+#          sudo docker run -d \
+#            --name my_app \
+#            --network $NETWORK_NAME \
+#            -p 8080:8080 \
+#            -e SPRING_PROFILES_ACTIVE=integration-tests \
+#            -e SERVER_SERVLET_SESSION_COOKIE_SECURE=false \
+#            app_image \
+#            sh -c "java -jar /app/app.jar"
+#
+#          # Verify container started
+#          sleep 2
+#          if ! sudo docker ps | grep -q my_app; then
+#            echo "❌ Container my_app failed to start"
+#            echo "Container logs:"
+#            sudo docker logs my_app || true
+#            exit 1
+#          fi
+#          echo "✅ Container my_app started successfully"
+#      - name: Wait for app to be healthy
+#        id: wait_health
+#        continue-on-error: true
+#        run: |
+#          echo "Waiting for app to be healthy from inside tester container..."
+#          sudo docker-compose -f docker-compose.integration.yml exec -T auth /bin/sh -c '
+#            for i in $(seq 1 20); do
+#              echo "Attempt $i: Checking app health ..."
+#              response=$(curl -s http://my_app:8080/health || true)
+#              echo "Response: $response"
+#              echo "$response" | grep "\"status\":\"UP\"" > /dev/null && exit 0
+#              echo "Retry $i: App not ready yet. Sleeping..."
+#              sleep 10
+#            done
+#            exit 1
+#          '
+#      - name: Print app logs on failure
+#        if: steps.wait_health.outcome == 'failure'
+#        run: |
+#          echo "❌ App failed to become healthy in time."
+#          echo "---- app.log ----"
+#          sudo docker logs my_app || true
+#          echo "-----------------"
+#          echo "---- Tomcat access logs ----"
+#          sudo docker exec my_app sh -c 'cat /app/logs/*.log || true'
+#          echo "-----------------------------"
+#      - name: Stop job if app failed to start
+#        if: steps.wait_health.outcome == 'failure'
+#        run: |
+#          echo "❌ Stopping job because the app failed to start properly."
+#          exit 1
+#      - name: Run Playwright Integration Tests in Docker
+#        id: integration_tests
+#        run: |
+#          NETWORK_NAME=$(sudo docker network ls --filter "label=com.docker.compose.project" --format '{{.Name}}' | head -n 1)
+#          if [ -z "$NETWORK_NAME" ]; then
+#            echo "❌ Failed to find docker-compose network"
+#            exit 1
+#          fi
+#          echo "✅ Running Playwright tests in network: $NETWORK_NAME"
+#          sudo docker run --rm \
+#            --network "$NETWORK_NAME" \
+#            -v "${{ github.workspace }}:/app" \
+#            -v ~/.gradle:/root/.gradle \
+#            -w /app \
+#            -e APP_BASE_URL="http://my_app:8080" \
+#            mcr.microsoft.com/playwright:v1.47.2-jammy \
+#            bash -c '
+#              set -e
+#              echo "Installing OpenJDK and curl..."
+#              apt-get update -qq
+#              apt-get install -y openjdk-21-jdk curl iputils-ping > /dev/null
+#              export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64
+#              export PATH=$JAVA_HOME/bin:$PATH
+#              echo "🔍 Java version:"
+#              java -version
+#              echo "🔍 Resolving container hostnames..."
+#              APP_IP=$(getent hosts my_app | awk "{ print \$1 }")
+#              AUTH_IP=$(getent hosts auth | awk "{ print \$1 }")
+#              echo "Resolved my_app -> $APP_IP"
+#              echo "Resolved auth  -> $AUTH_IP"
+#              echo "$APP_IP my_app" >> /etc/hosts
+#              echo "$AUTH_IP auth" >> /etc/hosts
+#              cat /etc/hosts
+#              export PLAYWRIGHT_ARGS="--no-sandbox --disable-dev-shm-usage --host-resolver-rules=\\\"MAP my_app $APP_IP, MAP auth $AUTH_IP, EXCLUDE localhost\\\""
+#              echo "🔍 Listing /app contents:"
+#              ls -l /app
+#              echo "Testing network connectivity..."
+#              ping -c 2 my_app || echo "⚠️ Ping failed"
+#              echo "Checking app health with header Host: localhost..."
+#              curl -v -H "Host: localhost" http://my_app:8080/health || echo "⚠️ Curl failed"
+#              echo "Installing Playwright dependencies..."
+#              npx playwright install --with-deps
+#              echo "Running Gradle Playwright tests..."
+#              xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" \
+#                ./gradlew --no-daemon --info testPlaywrightIntegration \
+#                -Dplaywright.args="$PLAYWRIGHT_ARGS" \
+#                -Dplaywright.headless=true
+#            '
+#      - name: Print app logs on failure
+#        if: always()
+#        run: |
+#          echo "Checking for app container..."
+#          if sudo docker ps -a --format '{{.Names}}' | grep -q '^my_app$'; then
+#            echo "✅ Container my_app found"
+#            echo "---- app logs ----"
+#            sudo docker logs my_app || true
+#            echo "-----------------"
+#            echo "---- Tomcat access logs ----"
+#            sudo docker exec my_app sh -c 'cat /app/logs/*.log || true'
+#            echo "-----------------------------"
+#          else
+#            echo "⚠️ Container my_app does not exist or has been removed"
+#            echo "Running containers:"
+#            sudo docker ps -a || true
+#          fi
+#      - name: Print auth logs on failure
+#        if: always()
+#        run: |
+#          echo "Checking for auth container..."
+#          if sudo docker ps -a --format '{{.Names}}' | grep -q '^auth$'; then
+#            echo "✅ Container auth found"
+#            echo "---- Auth logs ----"
+#            sudo docker logs auth || true
+#            echo "-----------------"
+#          else
+#            echo "⚠️ Container auth does not exist or has been removed"
+#          fi
+#      - name: Upload Playwright videos
+#        if: always()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: playwright-videos
+#          path: build/reports/tests/testPlayWrightIntegration/videos/
 
   build:
     name: Build docker image from hmpps-github-actions
