--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -69,7 +69,7 @@ jobs:
           - 5432:5432
     steps:
       - name: Clone repository
-      - uses: actions/checkout@v6
+        uses: actions/checkout@v6
 
       - name: Setup Java
         uses: actions/setup-java@v5
